httpbin/base/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: webapp-chart
  namespace: webapp
  annotations:
    konghq.com/strip-path: "true"
spec:
  ingressClassName: kong
  rules:
  - host: webapp.com
    http:
      paths:
      - path: /webapp
        pathType: ImplementationSpecific
        backend:
          service:
            name: webapp-chart
            port:
              number: 5000
