httpbin/base/virtualservice.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: webapp
spec:
  hosts:
  - webapp.com
  gateways:
  - webapp/webapp-gateway
  http:
  - route:
    - destination:
        host: webapp-chart
        subset: v1
      weight: 90
    - destination:
        host: webapp-chart
        subset: v2
      weight: 10
